--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ google-services.json
 /.claude/
 /.dart_tool/
 /app/.dart_tool/
+/backend/models/__pycache__/*.pyc
+/backend/routes/__pycache__
+/backend/__pycache__
+/backend/utils/__pycache__
