--- a/backend/config.json
+++ b/backend/config.json
@@ -1,8 +1,8 @@
 {
   "database": {
-    "type": "mysql",
+    "type": "sqlite",
     "sqlite": {
-      "path": "data/xiuxing.db"
+      "path": "xiuxing.db"
     },
     "mysql": {
       "host": "d3d3LnJvbmdodWF4dWVsZW5nLnNpdGU=",
