--- a/app/android/gradle.properties
+++ b/app/android/gradle.properties
@@ -1,16 +1,29 @@
 android.useAndroidX=true
 android.enableJetifier=true
 
-# 网络配置
+# 性能优化配置
 org.gradle.daemon=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
+org.gradle.caching=true
+
 
 # SSL配置，忽略SSL验证
 systemProp.javax.net.ssl.trustStore=
 systemProp.javax.net.ssl.trustStorePassword=
 systemProp.com.sun.net.ssl.checkRevocation=false
 
+# 代理配置
+systemProp.http.proxyHost=172.25.0.1
+systemProp.http.proxyPort=1080
+systemProp.https.proxyHost=172.25.0.1
+systemProp.https.proxyPort=1080
+systemProp.http.nonProxyHosts=localhost|127.*|[::1]
+systemProp.https.nonProxyHosts=localhost|127.*|[::1]
+
+# 强制使用代理
+org.gradle.daemon.debug=false
+org.gradle.jvmargs=-Xmx6144m -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 -XX:+UseG1GC -XX:+UseStringDeduplication -Dhttp.proxyHost=172.25.0.1 -Dhttp.proxyPort=1080 -Dhttps.proxyHost=172.25.0.1 -Dhttps.proxyPort=1080
+
 # 强制禁用Flutter新插件系统
 flutter.gradle.plugin.migration.disabled=true
-org.gradle.jvmargs=-Dflutter.gradle.plugin.migration.disabled=true -Dtrust_all_cert=true -Dcom.sun.net.ssl.checkRevocation=false -Djava.net.useSystemProxies=true
