docker-compose.yml

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.8'
 services:
   xiuxing-manager:
     build: .
+    image: xiuxing-backend
     container_name: xiuxing-backend
     ports:
       - "${FLASK_PORT:-5566}:${FLASK_PORT:-5566}"
